making column header v-alignn top so when a column is not filterable, but others are, it will still align the header names correctly

--- a/css/griddly-bear.css
+++ b/css/griddly-bear.css
@@ -109,6 +109,7 @@
     padding:8px 10px;
     border-bottom:1px solid #DBDBDB;
     text-align:left;
+    vertical-align:top;
 }
 
 .gb-data-table .gb-data-table-header-row th a.gb-column-sort {
